# rdlog

./: .gitignore  .gitmodules  CMakeLists.txt  Package.resolved  Package.swift  README.md  deploy.sh  run.sh
Sources/rdlog/inc/: rd_db.h  rd_error.h  rd_file.h  rd_model.h  rd_todo.h  rdlog.h  resources.h  rnd.h
Sources/rdlog/src/: main.c  rd_run.c  rd_validate.c  ress.c  ress.h
Sources/rdlog_client/: RDLogManager.swift  RDLogger.swift  README.md
Sources/rdlog_client/CallStackAnalyser/: CallStackAnalyser.swift  CwlDemangle.swift
Sources/rdlog_client/CallStackParser/: CallStackParser.swift
Sources/rdlog_client/RDLogger/: RDLogger.swift  RDLoggingEvent.swift
Sources/rdlog_client/rnd/: String+Extensions.swift
Sources/reswrapper/: ResourceHelper.swift
Sources/reswrapper/Resources/: recreate_db.sh
Sources/reswrapper/inc/: ResourceHelper.h
Tests/rdlogClientTests/: CallStackTests.swift  RDLogClientTests.swift
Tests/rdlogTests/: RDLogTests.m  rdlogTests.swift
inc/: rd_model.h  rdlog.h
libs/json/: CMakeLists.txt
libs/json/inc/: rd_json.h
libs/rdlib/: .gitignore  CMakeLists.txt  README.md
libs/rdlib/inc/: rd_filesystem.h  rd_log.h  rd_network.h  rd_path.h  rd_random.h  rd_string.h  rd_threads.h  rd_time.h  rd_utils.h  rdlib.h
libs/rdlib/src/: rd_is_prime.c
resources/: rdlog.sqlite  recreate_db.sh
resources/sql/: message.sql
src/: main.c  rd_run.c  rd_validate.c
src/server/db/: rd_db_create.c  rd_db_exists.c  rd_db_save_message.c  rd_get_db_path.c
src/server/sockets/: rd_accept_from_socket.c  rd_open_socket_to_listen.c
(+69 files in other folders)
